# talker_server

./: .env  .env.example  .gitignore  Dockerfile  ReadMe.md  Talker Server Technical Design Documen.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.trae/rules/: flutter.md  python.md
alembic/: env.py
app/: main.py
app/api/: deps.py
app/api/v1/: router.py
app/core/: config.py  database.py  security.py
app/core/middlewares/: __init__.py  gzip_middleware.py  logging_middleware.py
app/models/: character.py  chat_session.py  interaction.py  social_request.py  user.py  vector_store.py
app/schemas/: __init__.py  character.py  chat_log.py  chat_session.py  common.py  memory.py  message_record.py  protocol.py  recommendation.py  social.py  stats.py  user.py  voice.py
app/services/: callbacks.py  character_service.py  chat_agent.py  chat_service.py  chat_stream.py  memory_service.py  recommendation_service.py  session_service.py  social_service.py  stats_service.py  story_service.py  user_service.py  voice_service.py
app/worker/: celery_app.py  tasks.py
client/: README.md  analysis_options.yaml  chat_simulation.dart  pubspec.yaml
client/.dart_tool/: package_config.json
client/example/: main.dart
client/lib/: talker_client.dart
client/test/: talker_client_test.dart  verify_client.dart
docs/: chat_core.md
scripts/: check_config.py  check_routes.py  init_otome_data.py  punkscosmos_seo_keywords.csv  seo_miner.py  verify_data.py
tests/: conftest.py  test_characters.py  test_chat_ws.py  test_social.py  test_stats.py  test_users.py
(+43 files in other folders)
